# PartHive

./: .gitattributes  .gitignore  .gitmodules  README.md  metadata.json
docs/: packages.json  repository.json
plugins/: NOTICE.md  README.md  __init__.py  parthive_action.py  parthive_config.py  parthive_importer.py  parthive_lib_table.py  parthive_paths.py  parthive_ui.py  plugin.json  requirements.txt
plugins/easyeda2kicad-ph/: NOTICE  README.md  pyproject.toml
plugins/easyeda2kicad-ph/easyeda2kicad_ph/kicad/: export_kicad_footprint.py  parameters_kicad_footprint.py
plugins/parthive_ee/kicad/: parameters_kicad_symbol.py
tools/: build_pcm_repo.py  build_zip.py
