[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyeda2kicad-ph"
dynamic = ["version"]
description = "EasyEDA / JLCPCB (LCSC) to KiCad converter — a PartHive fork of uPesy/easyeda2kicad.py (configurable footprint reference, text sizes, symbol-to-footprint library linking; pure standard library)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "uPesy", email = "contact@upesy.com" },
]
maintainers = [
    { name = "NeoCircuitsLab" },
]
keywords = ["easyeda", "kicad", "lcsc", "jlcpcb", "converter", "parthive"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/neocircuitslab/easyeda2kicad-ph"
Upstream = "https://github.com/uPesy/easyeda2kicad.py"

[tool.setuptools.dynamic]
version = { attr = "easyeda2kicad_ph._version.__version__" }

[tool.setuptools.packages.find]
include = ["easyeda2kicad_ph*"]
